@@ -1,0 +1,4 @@
+<script>
+open("javascript:alert('failed')", "_top");
+parent.postMessage("", "*");
+</script>
